Made the following changes: highlights in the nav bar, added API twitter, changed the pricing circles, changed the contact form. Action needed: center the form

--- a/project/index.html
+++ b/project/index.html
@@ -7,6 +7,7 @@
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
 		<link rel="shortcut icon" href="planting.ico">
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</head>
 	<body id="homeTarget">
 	<!-- PLEAS ALWAYS ADD COMENTS TO DEFINE WHATs THE NEW SECTION ABOUT-->
@@ -107,48 +108,43 @@
 				<div class="pricing-circles">
 					<h3>What will you pay?</h3>
 					<ul>
-						<li><span>24€     / 1 month </span></li>
-						<li><span>60€     / 1 quarter</span></li>
-						<li><span>100€     / 6 months</span></li>
-						<li><span>175€ / 1 year</span></li>
+						<li><span>24€ <br/><br/> 1 month </span></li>
+						<li><span>60€ <br/><br/> 1 quarter</span></li>
+						<li><span>100€ <br/><br/> 6 months</span></li>
+						<li><span>175€ <br/><br/> 1 year</span></li>
 					</ul>
 				</div>
 			</div>
 		</section>
-		<!-- Google Maps API -->
-		<div id="map"></div>
 		<!-- FOOTER/CONTACT INFO -->
 		<section class="contact">
 			<div class="content-wrap clearfix">
-				<h2>Get in touch to find out more! </h2>
+				<h2>Get in touch to find out more! #StayTuned with us on Twitter! </h2>
+				<div class="container">
+				   <div class="row">
+				      <div class="col">
+								<h4><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></h4>
+								<h4>+34.123.4567</h4>
+								<h4>123 Anywhere St.<br>
+								 Barcelona, Spain</h4>
+				      </div>
+				      <div class="col">
+								<a class="twitter-timeline" data-width="850" data-height="400" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/BerardoGarden?ref_src=twsrc%5Etfw">Tweets by BerardoGarden</a>
 
-				<div class="social">
-					<a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
-					<a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+				      </div>
+				   </div>
 				</div>
-				<p><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></p>
-				<p>+34.123.4567</p>
-				<p>123 Anywhere St.<br>
-				 Barcelona, Spain</p>
+
 				<footer>
 					<p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
 				</footer>
 			</div>
+
+
+
 		</section>
 	</body>
-	<script>
-			// Initialize and add the map BERARDO: 41.559222, 2.064889
-			function initMap() {
-			  var berardo = {lat: 41.559222, lng: 2.064889};
-			  var map = new google.maps.Map(
-			      document.getElementById('map'), {zoom: 17, center: berardo, mapTypeId:'satellite'});
-			  var marker = new google.maps.Marker({position: berardo, map: map});
-			}
-	</script>
-	</script>
-	 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8T-f1mbHQkSIi_laMFVmjrvmOfBAC4Nk&callback=initMap"
-	 async defer>
-	</script>
+
 	<script>
 	  src="https://code.jquery.com/jquery-3.4.1.min.js"
 	  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
