- cleaned up html and css files - changed image names to match pages - centred the form

--- a/project/index.html
+++ b/project/index.html
@@ -10,7 +10,8 @@
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</head>
 	<body id="homeTarget">
-	<!-- PLEAS ALWAYS ADD COMENTS TO DEFINE WHATs THE NEW SECTION ABOUT-->
+
+	<!-- PLEASE ALWAYS ADD COMENTS TO DEFINE WHAT THE NEW SECTION IS ABOUT-->
 	<!-- NEW NAW BAR by Mar -->
 				<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
 				  <a class="navbar-brand" href="#">Berardo</a>
@@ -41,26 +42,25 @@
 				  </div>
 				</nav>
 
-		<!-- HEADER-->
+	<!-- HEADER -->
 		<header>
 			<h1>Berardo: My Little Garden</h1>
 		</header>
 
-		<!--PROFILE -->
-		<!-- changed colour here -->
+  <!-- PROFILE -->
 		<section class="profile">
 			<div class="content-wrap clearfix">
 				<div class="summary">
 					<h2>Hello gardener!</h2>
 					<p>Are you passionate about growing your own fruits and vegetables? Do you adore the outdoors and gardening? Say no more!</p>
 					<p>You're in the right place...</p>
-					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrition. We provide the option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! All while being supported by our wonderful network and staff.</p>
-			</div>
+					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrition.</p>
+					<p>We provide the option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! All while being supported by our wonderful network and staff.</p>
+				</div>
 			</div>
 		</section>
-		<!-- EMPTY SECTION -->
-		<div id="empty"></div>
-		<!-- HOW IT WORKS new section -->
+
+  <!-- HOW IT WORKS -->
 		<section id="worksTarget" class="how-works">
 			<div class="content-wrap">
 				<h2> How does it work?</h2>
@@ -74,7 +74,8 @@
 				</p>
 			</div>
 		</section>
-		<!--PRICING-->
+
+ <!-- PRICING -->
 		<section id="pricingTarget" class="pricing">
 			<div class="content-wrap">
 				<h2>Discover our pricing packages</h2>
@@ -116,7 +117,8 @@
 				</div>
 			</div>
 		</section>
-		<!-- FOOTER/CONTACT INFO -->
+
+  <!-- FOOTER/CONTACT INFO -->
 		<section class="contact">
 			<div class="content-wrap clearfix">
 				<h2>Get in touch to find out more! #StayTuned with us on Twitter! </h2>
@@ -125,23 +127,18 @@
 				      <div class="col">
 								<h4><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></h4>
 								<h4>+34.123.4567</h4>
-								<h4>123 Anywhere St.<br>
+								<h4>Unnamed Road<br>
 								 Barcelona, Spain</h4>
 				      </div>
 				      <div class="col">
 								<a class="twitter-timeline" data-width="850" data-height="400" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/BerardoGarden?ref_src=twsrc%5Etfw">Tweets by BerardoGarden</a>
-
 				      </div>
 				   </div>
 				</div>
-
 				<footer>
 					<p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
 				</footer>
 			</div>
-
-
-
 		</section>
 	</body>
 
