Added social media icons new address

--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<title>My Little Garden / BERARDO | Barcelona</title>
 		<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Pacifico|Satisfy&display=swap" rel='stylesheet' type='text/css'>
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
     <link rel="shortcut icon" href="planting.ico">
 	</head>
-	
 <!-- NEW NAW BAR by Mar -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Berardo</a>
@@ -38,7 +38,6 @@
       </span>
     </div>
   </nav>
-
 <!-- MISSION/VALUES -->
 	<section class="profile">
   	<div class="content-wrap clearfix">
@@ -61,7 +60,6 @@
     	</div>
   	</div>
 	</section>
-
 <!-- ABOUT US -->
 	<section id="usTarget" class="about-us">
    <div class="content-wrap">
@@ -71,8 +69,8 @@
         <h4 class="date">2004-2007</h4>
       </div>
       <div class="description">
-        <p>Herman Camps grew up cultivating the land around him and wanted to share that experience to those who didn't have acess as a result of living in a large metropolis.</p>
-				<p>Before any planning, designing or construction occurs, Herman conducts a community readiness assessment. The goal is to make sure all interested parties understand the breadth of what is involved in establishing a community garden.</p>
+        <p>Hermannn Camps grew up cultivating the land around him and wanted to share that experience to those who didn't have acess as a result of living in a large metropolis.</p>
+				<p>Before any planning, designing or construction occurs, Hermann conducts a community readiness assessment. The goal is to make sure all interested parties understand the breadth of what is involved in establishing a community garden.</p>
 				<p>Delighted with the response, he starts on the long road of bringing this vision to fruition.</p>
       </div>
 		</div>
@@ -81,7 +79,7 @@
         <h4 class="date">2007-2017</h4>
       </div>
       <div class="description">
-				<p>After two solid years of searching for a suitable location, a plot of land in [insert name of town/area], just outside Barcelona, is purchased.</p>
+				<p>After two solid years of searching for a suitable location, a plot of land in Sabadell, just outside Barcelona, is purchased.</p>
 				<p> The planning, designing and subsquent construction gets under way.</p>
 				<p> Finally, after 5 years of working towards the dream, Berardo opens to the public in 2012!</p>
 				<p> The garden continues to gain traction and by 2017 is self-sufficient! It may have taken a decade, but you reap what you sow!</p>
@@ -98,19 +96,26 @@
     </div>
   </div>
 </section>
-
-<!-- FOOTER/CONTACT INFO -->
-<section class="contact">
-  <div class="content-wrap clearfix">
-    <h2>Get in touch to find out more! </h2>
-    <div class="social">
-      <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
-      <a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-    </div>
-			<p><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></p>
-    	<p>+34.123.4567</p>
-    	<p>Unnamed Road<br>
-     	Barcelona, Spain</p>
+			<!-- CONTACT INFO -->
+								<section class="contact">
+									<div class="content-wrap clearfix">
+										<h2>Get in touch to find out more!</h2>
+										<div class="container">
+											 <div class="row">
+													<div class="col">
+														<h4><a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a></h4>
+														<p>+34.937.273.717<br>Tros de Berardo<br>
+														 GPS: 41°33'33.2"N 2°03'53.6"E<br>
+														 Sabadell, Spain</p>
+														 <div class="social">
+												       <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
+												       <a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+												     </div>
+													</div>
+											 </div>
+										</div>
+									</section>
+		<!-- FOOTER-->
     <footer>
       <p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
     </footer>
