--- a/project/index.html
+++ b/project/index.html
@@ -4,14 +4,13 @@
 		<meta charset="UTF-8">
 		<title>My Little Garden / BERARDO | Barcelona</title>
 		<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Pacifico|Satisfy&display=swap" rel='stylesheet' type='text/css'>
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
 		<link rel="shortcut icon" href="planting.ico">
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</head>
 	<body id="homeTarget">
-
-	<!-- PLEASE ALWAYS ADD COMENTS TO DEFINE WHAT THE NEW SECTION IS ABOUT-->
 	<!-- NEW NAW BAR by Mar -->
 				<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
 				  <a class="navbar-brand" href="#">Berardo</a>
@@ -41,12 +40,10 @@
 				    </span>
 				  </div>
 				</nav>
-
 	<!-- HEADER -->
 		<header>
 			<h1>Berardo: My Little Garden</h1>
 		</header>
-
   <!-- PROFILE -->
 		<section class="profile">
 			<div class="content-wrap clearfix">
@@ -59,7 +56,6 @@
 				</div>
 			</div>
 		</section>
-
   <!-- HOW IT WORKS -->
 		<section id="worksTarget" class="how-works">
 			<div class="content-wrap">
@@ -74,7 +70,6 @@
 				</p>
 			</div>
 		</section>
-
  <!-- PRICING -->
 		<section id="pricingTarget" class="pricing">
 			<div class="content-wrap">
@@ -117,7 +112,6 @@
 				</div>
 			</div>
 		</section>
-
   <!-- FOOTER/CONTACT INFO -->
 		<section class="contact">
 			<div class="content-wrap clearfix">
@@ -125,11 +119,16 @@
 				<div class="container">
 				   <div class="row">
 				      <div class="col">
-								<h4><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></h4>
-								<h4>+34.123.4567</h4>
-								<h4>Unnamed Road<br>
-								 Barcelona, Spain</h4>
+								<h4><a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a></h4>
+								<p>+34.937.273.717<br>Tros de Berardo<br>
+								 GPS: 41°33'33.2"N 2°03'53.6"E<br>
+								 Sabadell, Spain</p>
+								 <div class="social">
+									 <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
+									 <a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+						 		</div>
 				      </div>
+
 				      <div class="col">
 								<a class="twitter-timeline" data-width="850" data-height="400" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/BerardoGarden?ref_src=twsrc%5Etfw">Tweets by BerardoGarden</a>
 				      </div>
@@ -141,14 +140,13 @@
 			</div>
 		</section>
 	</body>
-
+	<!-- this is the awesome jQuery to link the nav bar to the pricing section
+	new speed of scrolling reduced-->
 	<script>
 	  src="https://code.jquery.com/jquery-3.4.1.min.js"
 	  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 	  crossorigin="anonymous">
 	</script>
-<!-- this is the awesome jQuery to link the nav bar to the pricing section
-new speed of scrolling reduced-->
 	<script>
 	$(document).ready(function(){
   $("a").on('click', function(event) {
