Social media buttons and new adress in Visit us too

--- a/project/visitus.html
+++ b/project/visitus.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>My Little Garden</title>
 		<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Pacifico|Satisfy&display=swap" rel='stylesheet' type='text/css'>
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/final.css" rel="stylesheet">
 		<link rel="shortcut icon" href="planting.ico">
@@ -64,22 +65,30 @@
 				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8T-f1mbHQkSIi_laMFVmjrvmOfBAC4Nk&callback=initMap"
 				async defer>
 			 	</script>
+				<!-- CONTACT INFO -->
+									<section class="contact">
+										<div class="content-wrap clearfix">
+											<h2>Get in touch to find out more!</h2>
+											<div class="container">
+												 <div class="row">
+														<div class="col">
+															<h4><a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a></h4>
+															<p>+34.937.273.717<br>Tros de Berardo<br>
+															 GPS: 41°33'33.2"N 2°03'53.6"E<br>
+															 Sabadell, Spain</p>
+															 <div class="social">
+													       <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
+													       <a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+													     </div>
+														</div>
+												 </div>
+											</div>
+										</section>
+			<!-- FOOTER-->
+	    <footer>
+	      <p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
+	    </footer>
 
-		<!-- FOOTER/CONTACT INFO -->
-			<section class="contact">
-				<div class="content-wrap clearfix">
-					<h2>Get in touch to find out more! </h2>
-					<div class="social">
-						<a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
-						<a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-					</div>
-					<p><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></p>
-					<p>+34.123.4567</p>
-					<p>Unnamed Road<br>
-					 Barcelona, Spain</p>
-				<footer>
-					<p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
-				</footer>
 			</div>
 		</section>
 	</body>
