--- a/project/index.html
+++ b/project/index.html
@@ -119,13 +119,12 @@
 				<div class="container">
 				   <div class="row">
 				      <div class="col">
-								<h4><a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a></h4>
-								<p>+34.937.273.717<br>Tros de Berardo<br>
-								 GPS: 41°33'33.2"N 2°03'53.6"E<br>
-								 Sabadell, Spain</p>
-								 <div class="social">
+								<div><a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a><br>
+								+34.937.273.717<br>Tros de Berardo<br>GPS: 41°33'33.2"N 2°03'53.6"E<br>Sabadell, Spain
+							  </div>
+								<div class="social">
 									 <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
-									 <a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+									 <a href="https://www.linkedin.com/in/marcampssallent/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
 						 		</div>
 				      </div>
 
