new naw bar not all updated yet

--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -69,7 +69,7 @@
         <h4 class="date">2004-2007</h4>
       </div>
       <div class="description">
-        <p>Hermannn Camps grew up cultivating the land around him and wanted to share that experience to those who didn't have acess as a result of living in a large metropolis.</p>
+        <p>Hermann Camps grew up cultivating the land around him and wanted to share that experience to those who didn't have acess as a result of living in a large metropolis.</p>
 				<p>Before any planning, designing or construction occurs, Hermann conducts a community readiness assessment. The goal is to make sure all interested parties understand the breadth of what is involved in establishing a community garden.</p>
 				<p>Delighted with the response, he starts on the long road of bringing this vision to fruition.</p>
       </div>
