--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>My Little Garden / BERARDO | Barcelona</title>
+		<title>Berardo: My Little Garden | Barcelona</title>
 		<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Pacifico|Satisfy&display=swap" rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
@@ -22,21 +22,21 @@
 				      <li class="nav-item active">
 				        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				      </li>
+							<li class="nav-item">
+								<a class="nav-link" href="#worksTarget">How it works?</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#pricingTarget">Pricing</a>
+							</li>
 				      <li class="nav-item">
 				        <a class="nav-link" href="aboutus.html">About us</a>
 							</li>
 						  <li class="nav-item">
 								 <a class="nav-link" href="visitus.html">Vist us</a>
 						  </li>
-						  <li class="nav-item">
-					 		  <a class="nav-link" href="#worksTarget">How it works?</a>
-					 	  </li>
-						  <li class="nav-item">
-				        <a class="nav-link" href="#pricingTarget">Pricing</a>
-						  </li>
 				    </ul>
 				    <span class="navbar-text">
-				      my little garden
+				      My Little Garden
 				    </span>
 				  </div>
 				</nav>
@@ -52,7 +52,8 @@
 					<p>Are you passionate about growing your own fruits and vegetables? Do you adore the outdoors and gardening? Say no more!</p>
 					<p>You're in the right place...</p>
 					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrition.</p>
-					<p>We provide the option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! All while being supported by our wonderful network and staff.</p>
+					<p>At Berardo, you will have the option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers!</p>
+					<p>Don't wait anymore and contact us today!</p>
 				</div>
 			</div>
 		</section>
@@ -66,7 +67,7 @@
 					<li> We will follow up via email or phone and answer any questions you might have </li>
 					<li> One of our Berardo gardens is all YOURS - ready to grow and nurture veggies, fruits and flowers! </li>
 				</ol>
-				<p>	Here's an example of what your garden could <a href="http://www.vegetable-gardening-online.com/images/xgrowingasquarefootgarden.jpg.pagespeed.ic.g0Ew_MukUW.jpg"><strong>look</strong></a> like
+				<p>	Here's an example of what your garden could <a href="http://www.vegetable-gardening-online.com/images/xgrowingasquarefootgarden.jpg.pagespeed.ic.g0Ew_MukUW.jpg" target="_blank"><strong>look</strong></a> like
 				</p>
 			</div>
 		</section>
@@ -119,7 +120,7 @@
 				<div class="container">
 				   <div class="row">
 				      <div class="col">
-								<div><a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a><br>
+								<div class="details"><a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a><br>
 								+34.937.273.717<br>Tros de Berardo<br>GPS: 41°33'33.2"N 2°03'53.6"E<br>Sabadell, Spain
 							  </div>
 								<div class="social">
@@ -127,14 +128,13 @@
 									 <a href="https://www.linkedin.com/in/marcampssallent/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
 						 		</div>
 				      </div>
-
 				      <div class="col">
 								<a class="twitter-timeline" data-width="850" data-height="400" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/BerardoGarden?ref_src=twsrc%5Etfw">Tweets by BerardoGarden</a>
 				      </div>
 				   </div>
 				</div>
 				<footer>
-					<p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
+					<p class="copyright">&#169; 2019 by Berardo: My Little Garden<br>Design: Mar Camps, Dina Said & Kate Zhuzha</p>
 				</footer>
 			</div>
 		</section>
