footer update and nav bar order changed again

--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -20,19 +20,19 @@
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
+				<li class="nav-item">
+				 	<a class="nav-link" href="index.html">How it works?</a>
+			 	</li>
+			 	<li class="nav-item">
+				 	<a class="nav-link" href="#pricingTarget">Pricing</a>
+		 		</li>
         <li class="nav-item active">
           <a class="nav-link" href="aboutus.html">About us</a>
         </li>
-        </li>
-       <li class="nav-item">
+       	<li class="nav-item">
            <a class="nav-link" href="visitus.html">Vist us</a>
-       </li>
-       <li class="nav-item">
-        <a class="nav-link" href="index.html">How it works?</a>
-      </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#pricingTarget">Pricing</a>
-      </ul>
+       	</li>
+			</ul>
       <span class="navbar-text">
         my little garden
       </span>
@@ -96,28 +96,28 @@
     </div>
   </div>
 </section>
-			<!-- CONTACT INFO -->
-								<section class="contact">
-									<div class="content-wrap clearfix">
-										<h2>Get in touch to find out more!</h2>
-										<div class="container">
-											 <div class="row">
-													<div class="col">
-														<h4><a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a></h4>
-														<p>+34.937.273.717<br>Tros de Berardo<br>
-														 GPS: 41°33'33.2"N 2°03'53.6"E<br>
-														 Sabadell, Spain</p>
-														 <div class="social">
-												       <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
-												       <a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-												     </div>
-													</div>
-											 </div>
-										</div>
-									</section>
-		<!-- FOOTER-->
-    <footer>
-      <p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
-    </footer>
-  </div>
-</section>
+<!-- FOOTER/CONTACT INFO -->
+	<section class="contact">
+		<div class="content-wrap clearfix">
+			<h2>Get in touch to find out more! #StayTuned with us on Twitter! </h2>
+			<div class="container">
+				 <div class="row">
+						<div class="col">
+							<div class="details"><a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a><br>
+							+34.937.273.717<br>Tros de Berardo<br>GPS: 41°33'33.2"N 2°03'53.6"E<br>Sabadell, Spain
+							</div>
+							<div class="social">
+								 <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
+								 <a href="https://www.linkedin.com/in/marcampssallent/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+							</div>
+						</div>
+						<div class="col">
+							<a class="twitter-timeline" data-width="850" data-height="400" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/BerardoGarden?ref_src=twsrc%5Etfw">Tweets by BerardoGarden</a>
+						</div>
+				 </div>
+			</div>
+		<footer>
+		<p class="copyright">&#169; 2019 by Berardo: My Little Garden<span style="float:right">Design: Mar Camps, Dina Said & Kate Zhuzha</p>
+		</footer>
+		</div>
+	</section>
