--- a/project/index.html
+++ b/project/index.html
@@ -133,9 +133,9 @@
 				      </div>
 				   </div>
 				</div>
-				<footer>
-					<p class="copyright">&#169; 2019 by Berardo: My Little Garden<br>Design: Mar Camps, Dina Said & Kate Zhuzha</p>
-				</footer>
+			<footer>
+			<p class="copyright">&#169; 2019 by Berardo: My Little Garden<span style="float:right">Design: Mar Camps, Dina Said & Kate Zhuzha</p>
+			</footer>
 			</div>
 		</section>
 	</body>
