--- a/project/visitus.html
+++ b/project/visitus.html
@@ -32,7 +32,7 @@
 							<a class="nav-link" href="aboutus.html">About us</a>
 						</li>
 					  <li class="nav-item active">
-							<a class="nav-link" href="visitus.html">Vist us</a>
+							<a class="nav-link" href="visitus.html">visit us</a>
 					  </li>
 					</ul>
 					<span class="navbar-text">
