--- a/project/index.html
+++ b/project/index.html
@@ -32,7 +32,7 @@
 				        <a class="nav-link" href="aboutus.html">About us</a>
 							</li>
 						  <li class="nav-item">
-								 <a class="nav-link" href="visitus.html">Vist us</a>
+								 <a class="nav-link" href="visitus.html">Visit us</a>
 						  </li>
 				    </ul>
 				    <span class="navbar-text">
