--- a/project/index.html
+++ b/project/index.html
@@ -9,6 +9,14 @@
 		<link rel="stylesheet" href="css/final.css">
 		<link rel="shortcut icon" href="planting.ico">
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<!-- GA Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-152822158-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-152822158-1');
+		</script>
 	</head>
 	<body id="homeTarget">
 	<!-- NEW NAW BAR by Mar -->
