--- a/project/visitus.html
+++ b/project/visitus.html
@@ -8,6 +8,15 @@
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/final.css" rel="stylesheet">
 		<link rel="shortcut icon" href="planting.ico">
+		<!-- GA Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-152822158-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-152822158-1');
+		</script>
+
 	</head>
 	<body class="visit">
 		<div class="wrapper">
