--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -8,6 +8,14 @@
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
     <link rel="shortcut icon" href="planting.ico">
+		<!-- GA! Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-152822158-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-152822158-1');
+		</script>
 	</head>
 <!-- NEW NAW BAR by Mar -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
