--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -107,7 +107,7 @@
 <!-- FOOTER/CONTACT INFO -->
 	<section class="contact">
 		<div class="content-wrap clearfix">
-			<h2>Get in touch to find out more! #StayTuned with us on Twitter! </h2>
+			<h2>Get in touch to find out more!</h2>
 			<div class="container">
 				 <div class="row">
 						<div class="col">
@@ -115,7 +115,7 @@
 							+34.937.273.717<br>Tros de Berardo<br>GPS: 41°33'33.2"N 2°03'53.6"E<br>Sabadell, Spain
 							</div>
 							<div class="social">
-								 <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
+								 <a href="https://twitter.com/BerardoGarden" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a>
 								 <a href="https://www.linkedin.com/in/marcampssallent/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
 							</div>
 						</div>
